Edge Browser Overflow Fix

--- a/v1/css/main.css
+++ b/v1/css/main.css
@@ -44,7 +44,7 @@ body {
     margin: 0;
     font-family: 'ABeeZee', sans-serif;
     color: #151515;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 /* Links and Text */
